To address the issue that users might take half-complete/broken archives as valid archives, we decided to use the approach also used by browsers when downloading files, i.e. the archives are created with a temporary name like <archive name>.tar.gpg.part and, after successful creation, they are renamed to remove the .part suffix.
Description
Description
Revisions and Commits
Revisions and Commits
rM GPGME | |||
rM46f5d5eeb3b1 qt: Use temporary .part file names when creating archives | |||
rM8d8985bda174 qt: Refactor removal of output file on cancel or error |
Status | Assigned | Task | ||
---|---|---|---|---|
Resolved | • ikloecker | T6584 Kleopatra / Gpgtar: Cancel on encrypt leaves a broken archive behind | ||
Resolved | • ebo | T6721 QGpgME: Create archive as .part and rename on successful creation |