lang/qt/src/util.cpp
@@ -37,6 +37,10 @@
 
 #include "util.h"
 
+#include "qgpgme_debug.h"
+
+#include <QFile>
+
 #include <key.h>
 
 #include <algorithm>
@@ -60,4 +64,15 @@ QStringList toFingerprints(const std::vector<GpgME::Key> &keys)
         return QString::fromLatin1(k.primaryFingerprint());
     });
     return fprs;
+}
+
+void removeFile(const QString &fileName)
+{
+    if (QFile::exists(fileName)) {
+        if (QFile::remove(fileName)) {
+            qCDebug(QGPGME_LOG) << __func__ << "- Removed file" << fileName;
+        } else {
+            qCDebug(QGPGME_LOG) << __func__ << "- Removing file" << fileName << "failed";
+        }
+    }
 }
